# epicentrweb

./: Cargo.toml
src/: main.rs
static/: index.html
static/style/: style.css
