[package]
name = "epicentrweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
warp = "0.3"
mongodb = "2.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "4.4.0"
futures = { version = "0.3", features = [] }
chrono = { version = "0.4.31", features = [] }
reqwest = "0.11.22"

[dev-dependencies]
pretty_env_logger = "0.5"